# spin-screen-shotter

./: .gitignore  README.md  pyproject.toml
src/screen_shotter/: __main__.py
